# pic-prompt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
docs/: builder_examples.md  builder_examples.py  dir_structure.txt  images_example.py
examples/: example1.py  example2-image-cache.py  example4-image-resizer.py
src/pic_prompt/: __init__.py  pic_prompt.py
src/pic_prompt/builder/: __init__.py  prompt_builder.py
src/pic_prompt/core/: image_config.py  message_role.py  message_type.py  prompt_config.py  prompt_content.py  prompt_message.py
src/pic_prompt/images/: __init__.py  image_data.py  image_downloader.py  image_loader.py  image_registry.py  image_resizer.py
src/pic_prompt/providers/: provider.py  provider_anthropic.py  provider_factory.py  provider_gemini.py  provider_names.py  provider_openai.py
src/pic_prompt/utils/: logger.py
src/prompt_any/: __init__.py
src/prompt_any/builder/: __init__.py  async_prompt_builder.py  prompt_builder.py
src/prompt_any/core/: __init__.py  config.py  errors.py  image_config.py  message_type.py  messages.py  prompt_config.py  prompt_content.py  prompt_message.py
src/prompt_any/images/: __init__.py  errors.py  handler.py  image_data.py  image_downloader.py  image_handler.py  image_registry.py  image_transformer.py
src/prompt_any/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py  provider.py  provider_anthropic.py  provider_factory.py  provider_gemini.py  provider_helper.py  provider_helper_anthropic.py  provider_helper_factory.py  provider_helper_gemini.py  provider_helper_openai.py  provider_names.py  provider_openai.py
src/prompt_any/utils/: logger.py
tests/: test_pic_prompt.py
tests/test_builder/: test_prompt_builder.py
tests/test_core/: test_image_config.py  test_message_role.py  test_message_type.py  test_prompt_config.py  test_prompt_content.py  test_prompt_message.py
tests/test_images/: test_image_data.py  test_image_downloader.py  test_image_loader.py  test_image_registry.py  test_image_resizer.py  test_image_transformer.py
tests/test_images/test_sources/: test_http_source.py  (+3 more)
tests/test_providers/: test_provider.py  test_provider_anthropic.py  test_provider_factory.py  test_provider_gemini.py  test_provider_names.py  test_provider_openai.py
(+13 files in other folders)
